# variable-tracker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  
tests/: test_init.py  test_settings_loader.py  test_tracker.py
variable_tracker/: __init__.py  function_tracker.py  main.py  models.py  printer.py  settings_loader.py  tracker.py
