[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "variable-tracker"
version = "0.2.0"
description = "A library to globally track variable changes and log them with file, line, and function details."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Vimal Mahawar", email = "vimalmahawar1@gmail.com" }
]
requires-python = ">=3.6"
dependencies = [
    "tabulate>=0.9.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/vimal0207/variable-tracker"
